infra/k8s/central-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centraldb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: centraldb
  template:
    metadata:
      labels:
        app: centraldb
    spec:
      containers:
        - name: centraldb
          image: nidhi9521/centraldb
---
apiVersion: v1
kind: Service
metadata:
  name: centraldb-srv
spec:
  selector:
    app: centraldb
  ports:
    - name: centraldb
      protocol: TCP
      port: 3000
      targetPort: 3000
