infra/k8s/demo-mongo-depl.yaml
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: demo-mongo-pvc
# spec:
#   storageClassName: ""
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 500M
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: demo-mongo-data
# spec:
#   capacity:
#     storage: 500M
#   volumeMode: Filesystem
#   accessModes:
#     - ReadWriteOnce
#   persistentVolumeReclaimPolicy: Retain
#   storageClassName: ""
#   hostPath:
#     path: /data/demo
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-mongo-depl
spec:
  selector:
    matchLabels:
      app: demo-mongo
  template:
    metadata:
      labels:
        app: demo-mongo
    spec:
      containers:
        - name: demo-mongo
          image: mongo
          # volumeMounts:
          #   - name: "demo-mongo-data-dir"
          #     mountPath: "/data/db"
      # volumes:
      #   - name: "demo-mongo-data-dir"
      #     persistentVolumeClaim:
      #       claimName: "demo-mongo-pvc"
---
apiVersion: v1
kind: Service
metadata:
  name: demo-mongo-srv
spec:
  type: NodePort
  selector:
    app: demo-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 30801
